Don't resize image if new one would be larger.